adds dummy text and css layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
 </head>
 <body>
 
+    <div class="Texts js-texts">
+        <div class="Texts__content">
+            <div class="Text js-text">
+                        <h1 class="Title">Surf</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                
+            </div>
+        </div>
+    </div>
+
     <div class="circle-container">
         <div class="circle">
         </div>
