begins js scroll with follow function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas class="is-fixed" width="600" height="600"></canvas>
 
     <div class="Texts js-texts">
         <div class="Texts__content">
@@ -27,15 +28,39 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
                         </p>
-                
+            </div>
+            <div class="Text js-text">
+                <div class="circle-container">
+                    <div class="circle js-circle"><div>
+                        <h1 class="Title">Club</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi itaque, minus quidem labore mollitia rem assumenda sit facere odio pariatur. Voluptatum quisquam nostrum dolor commodi accusamus ea nesciunt iusto sunt.
+                        </p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="circle-container">
+    <!-- <div class="circle-container">
         <div class="circle">
         </div>
-    </div>
+    </div> -->
+
+
+
+
     
     <script src="https://unpkg.com/zdog@1.0.2/dist/zdog.dist.min.js"></script>
     <script src="scroll.js"></script>
