adds fonts and cheeseburger svg animation

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <canvas class="zdog-canvas is-fixed" width="600" height="600"></canvas>
 
+    <a href="https://github.com/aylorbrown/learningjs-coolscroll" class="repo">repo</a>
+
 
     <div class="Texts js-texts">
         <div class="Texts__content">
             <div class="Text js-text">
                 <div class="circle js-circle"></div>
-            <h1 class="Title">Surf</h1>
+            <h1 class="Title">BURGER</h1>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
             </p>
@@ -34,7 +36,7 @@
             </div>
             <div class="Text js-text">
                 <div class="circle js-circle"></div>
-                <h1 class="Title">Surf</h1>
+                <h1 class="Title">BURGER</h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
                 </p>
