--- a/index.html
+++ b/index.html
@@ -19,38 +19,36 @@
                 <div class="circle js-circle"></div>
             <h1 class="Title">BURGER</h1>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                We begin with the bottom bun (obviously!) which we prefer toasted slightly. It will help hold your condiments in the bread and not on your shirts. This would stand to reason that condiments come next, but only your ketchup and mustard. Mayo has a more delicate texture and can get lost down below, plus it can help anchor your veggies up top!
             </p>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                Next up is pickles. They go under the meat so their strong crisp flavor doesn’t overpower your tomato that gets added later. Add your meat and your cheese (which is hopefully melted) and then your tomato. If your cheese is melty enough it should hold the tomato still. Add your lettuce (it acts like a blanket and keeps the tomato in place) and then your onion and mayo. We prefer red onion for taste and color both. Top it off with your toasted top bun and you’re all set.
             </p>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                If we use bacon we place it on the meat, but under the cheese. It keeps it in place and allows the taste of the two meats to mingle. Plus, it’s nice to have the cheese hang onto things so you don’t take one bite and end up with an entire strip of bacon that’s pulled out of the assembly.
             </p>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                It seems like a great deal of information, but once you start assembling, it will go together in a snap! 
             </p>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                Stay home, wash your hands, wear a face mask in public, and assemble beautiful burgers. 
             </p>
+            
             </div>
             <div class="Text js-text">
                 <div class="circle js-circle"></div>
                 <h1 class="Title">BURGER</h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                    Comenzamos con el bollo de fondo (¡obviamente!) Que preferimos tostar ligeramente. Le ayudará a mantener sus condimentos en el pan y no en sus camisas. Esto podría razonar que los condimentos vienen después, pero solo tu ketchup y mostaza. Mayo tiene una textura más delicada y puede perderse debajo, ¡además puede ayudar a anclar tus verduras en la parte superior!    
+                <p>
+                <p>
+                    El siguiente es encurtidos. Van debajo de la carne para que su sabor fuerte y crujiente no domine su tomate que se agrega más tarde. Agregue su carne y su queso (que con suerte se derrita) y luego su tomate. Si su queso está lo suficientemente meloso, debe mantener el tomate quieto. Agregue su lechuga (actúa como una manta y mantiene el tomate en su lugar) y luego su cebolla y mayonesa. Preferimos cebolla roja para el gusto y el color de ambos. Completa con tu pan tostado y listo.
                 </p>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                    Si usamos tocino, lo colocamos sobre la carne, pero debajo del queso. Lo mantiene en su lugar y permite que el sabor de las dos carnes se mezcle. Además, es bueno que el queso se cuelgue de las cosas para que no le dé un mordisco y termine con una tira entera de tocino que se ha sacado del conjunto.
                 </p>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
-                </p>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
-                </p>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit odio quibusdam, voluptatibus facilis nostrum quam ipsa ratione optio assumenda nobis cupiditate excepturi necessitatibus possimus cumque, officia similique distinctio quos iure.
+                    Parece una gran cantidad de información, pero una vez que comience a ensamblar, ¡todo se combinará en un instante!         
                 </p>
             </div>
 
