adds mobile media query

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS SCROLL</title>
+    <link rel="stylesheet" href="https://use.typekit.net/oqq2ggc.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
         <div class="Texts__content">
             <div class="Text js-text">
                 <div class="circle js-circle"></div>
-            <h1 class="Title">BURGER</h1>
+            <h1 class="Title">Burger Zen</h1>
             <p>
                 We begin with the bottom bun (obviously!) which we prefer toasted slightly. It will help hold your condiments in the bread and not on your shirts. This would stand to reason that condiments come next, but only your ketchup and mustard. Mayo has a more delicate texture and can get lost down below, plus it can help anchor your veggies up top!
             </p>
@@ -37,7 +38,7 @@
             </div>
             <div class="Text js-text">
                 <div class="circle js-circle"></div>
-                <h1 class="Title">BURGER</h1>
+                <h1 class="Title">Burger Zen</h1>
                 <p>
                     Comenzamos con el bollo de fondo (¡obviamente!) Que preferimos tostar ligeramente. Le ayudará a mantener sus condimentos en el pan y no en sus camisas. Esto podría razonar que los condimentos vienen después, pero solo tu ketchup y mostaza. Mayo tiene una textura más delicada y puede perderse debajo, ¡además puede ayudar a anclar tus verduras en la parte superior!    
                 <p>
