--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS SCROLL</title>
+    <title>Burger Zen</title>
     <link rel="stylesheet" href="https://use.typekit.net/oqq2ggc.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,6 +19,12 @@
             <div class="Text js-text">
                 <div class="circle js-circle"></div>
             <h1 class="Title">Burger Zen</h1>
+            <p>
+                Quiet your mind, live in the present, assemble a burger. 
+            </p>
+            <p>
+                Gather you ingredients - cooked burger patty, cheese, buns, lettuce, tomato, pickles, condiments. 
+            </p>
             <p>
                 We begin with the bottom bun (obviously!) which we prefer toasted slightly. It will help hold your condiments in the bread and not on your shirts. This would stand to reason that condiments come next, but only your ketchup and mustard. Mayo has a more delicate texture and can get lost down below, plus it can help anchor your veggies up top!
             </p>
@@ -39,6 +45,14 @@
             <div class="Text js-text">
                 <div class="circle js-circle"></div>
                 <h1 class="Title">Burger Zen</h1>
+                <p>
+                    Calma tu mente, vive el presente, prepara una hamburguesa. 
+                </p>
+                <p>
+                    Reúna sus ingredientes: hamburguesa cocinada, queso, bollos, lechuga, tomate, pepinillos, condimentos.
+                </p>
+                    
+                </p>
                 <p>
                     Comenzamos con el bollo de fondo (¡obviamente!) Que preferimos tostar ligeramente. Le ayudará a mantener sus condimentos en el pan y no en sus camisas. Esto podría razonar que los condimentos vienen después, pero solo tu ketchup y mostaza. Mayo tiene una textura más delicada y puede perderse debajo, ¡además puede ayudar a anclar tus verduras en la parte superior!    
                 <p>
