--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <title>Burger Zen</title>
     <link rel="stylesheet" href="https://use.typekit.net/oqq2ggc.css">
     <link rel="stylesheet" href="style.css">
